Fix bug with menu visibility/unclickable links due to contact page decoration; update blog article & TODO.txt.

--- a/public_html/css/contact.css
+++ b/public_html/css/contact.css
@@ -10,6 +10,7 @@
   width: 100vw;
   overflow: hidden;
   position: absolute;
+  z-index: -1;
 }
 
 #background-container {
